--- a/pom.xml
+++ b/pom.xml
@@ -80,11 +80,11 @@
 		<!-- <version>9.0.0.M9</version> -->
 		<!-- </dependency> -->
 
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.17.1</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -108,7 +108,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.42</version>
+			<version>5.</version>
 		</dependency>
 
 		<dependency>
